# EvalRAG

./: README.md  collect_results.py  evaluate.py  pyproject.toml  rag_outputs.json  rag_pipeline.py
data/: docs.txt
